--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="question10">10. What process involves heating an ore to obtain a metal?</string>
 
     <string name="submit">Submit</string>
+    <string name="submit1">Submit</string>
 
 
 </resources>
